:sparkles: url encoding for query string